# gnu_serpents

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README-HACKING  configure.ac
data/: Makefile.am  README
src/: Makefile.am  board.c  board.h  color.c  color.h  game.c  game.h  high_score.c  high_score.h  input_buffer.c  input_buffer.h  interface.c  interface.h  main.c  state.h
src/.deps/: serpents-board.Po  serpents-color.Po  serpents-game.Po  serpents-input_buffer.Po  serpents-interface.Po  serpents-main.Po
tests/: Makefile.am  check_board.c  check_board.h  check_color.c  check_color.h  check_high_score.c  check_high_score.h  check_input_buffer.c  check_input_buffer.h  check_serpents.c
